force-app/main/default/objects/Job_Openings__c/Job_Openings__c.object-meta.xml
<CustomObject>
    <label>Job Openings</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Openings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>