force-app/main/default/objects/Job_Openings__c/fields/About_Job__c.field-meta.xml
<CustomField>
    <fullName>About_Job__c</fullName>
    <label>About Job</label>
    <length>240</length>
    <type>Text</type>
</CustomField>