force-app/main/default/objects/Job_Openings__c/fields/CommunityUrl__c.field-meta.xml
<CustomField>
    <fullName>CommunityUrl__c</fullName>
    <formula>&apos;https://pmtvsample-developer-edition.ap27.force.com/s/job-openings/&apos; +  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CommunityUrl</label>
    <type>Text</type>
</CustomField>