force-app/main/default/objects/Job_Openings__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Openings</relationshipLabel>
    <relationshipName>Job_Openings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>