force-app/main/default/objects/Job_Openings__c/fields/Experience_Required__c.field-meta.xml
<CustomField>
    <fullName>Experience_Required__c</fullName>
    <label>Experience Required</label>
    <length>200</length>
    <type>Text</type>
</CustomField>