force-app/main/default/objects/Job_Openings__c/fields/Qualification_Required__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Required__c</fullName>
    <label>Qualification Required</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>