force-app/main/default/objects/Job_Openings__c/fields/Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Responsibilities__c</fullName>
    <label>Responsibilities</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>